[Css]: add css file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>New tab ✨</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     Hello
