--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>New tab ✨</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     Hello
