[Header]: add tailwind and amke:header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>New tab ✨</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/src/styles/app.css">
 </head>
-<body>
-    Hello
+<body class="h-dvh">
+<header class="border-2 border-black h-25">
+    <div class="w-full h-9 bg-yellow-500 border-b-2 border-black px-2 flex justify-between items-center">
+        Google Search
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+</header>
+
+<script src="/src/scripts/app.js"></script>
 </body>
 </html>
