--- a/index.html
+++ b/index.html
@@ -5,18 +5,29 @@
     <title>New tab ✨</title>
     <link rel="stylesheet" href="/src/styles/app.css">
 </head>
-<body class="h-dvh">
-<header class="border-2 border-black h-25">
-    <div class="w-full h-9 bg-yellow-500 border-b-2 border-black px-2 flex justify-between items-center">
-        Google Search
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
+<body class="h-dvh bg-body p-4">
+<div class="flex gap-4 w-full">
+    <div class="basis-1/2 border-2 border-black h-25 bg-box">
+        <div class="w-full h-9 bg-yellow-500 border-b-2 border-black px-2 flex justify-between items-center font-bold">
+            Google Search
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
     </div>
-</header>
-
+    <div class="basis-1/2 border-2 border-black h-25 bg-box">
+        <div class="w-full h-9 bg-yellow-500 border-b-2 border-black px-2 flex justify-between items-center font-bold">
+            Google Search
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="/src/scripts/app.js"></script>
 </body>
 </html>
